--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <div id="root"></div>
   
-  <script src="header.js"></script>
-  <script src="navbar.js"></script>
+  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="header.js"></script>
+  <script type="text/javascript" src="product.js"></script>
+  <script type="text/javascript" src="productList.js"></script>
 </body>
 </html>
