--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="header.js"></script>
+  <script type="text/javascript" src="addProductForm.js"></script>
   <script type="text/javascript" src="product.js"></script>
   <script type="text/javascript" src="productList.js"></script>
 </body>
