--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <script type="text/javascript" src="addProductForm.js"></script>
   <script type="text/javascript" src="product.js"></script>
   <script type="text/javascript" src="productList.js"></script>
+  <script type="text/javascript" src="sortButtons.js"></script>
 </body>
 </html>
